# speakprompt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appimage.sh  build.sh  project.md  realtime.sh  speakprompt.desktop  test.sh
src/: audio_capture.cpp  audio_capture.h  gui.cpp  gui.h  hotkey_manager.cpp  hotkey_manager.h  llm_processor.cpp  llm_processor.h  main.cpp  main_simple.cpp  terminal_output.cpp  terminal_output.h  transcription_engine.cpp  transcription_engine.h
